updated pre-processing to include balancing classes and gaussianising

--- a/LcnExperiment.ipynb
+++ b/LcnExperiment.ipynb
@@ -50,14 +50,14 @@
       "Found existing installation: NeuralNetworksTrainingPackage 1.0.0\n",
       "Uninstalling NeuralNetworksTrainingPackage-1.0.0:\n",
       "  Successfully uninstalled NeuralNetworksTrainingPackage-1.0.0\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0mNote: you may need to restart the kernel to use updated packages.\n",
       "Collecting git+https://github.com/DanielWarfield1/TabularExperimentTrackerClient\n",
       "  Cloning https://github.com/DanielWarfield1/TabularExperimentTrackerClient to /tmp/pip-req-build-xr8i5ojo\n",
       "  Running command git clone --filter=blob:none --quiet https://github.com/DanielWarfield1/TabularExperimentTrackerClient /tmp/pip-req-build-xr8i5ojo\n",
       "  Resolved https://github.com/DanielWarfield1/TabularExperimentTrackerClient to commit 780933411aa8c4e394478a26dec4a39447f8f012\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: openml in /opt/conda/lib/python3.10/site-packages (from TabularExperimentTrackerClient==0.0.1) (0.14.1)\n",
+      "  Preparing metadata (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25hRequirement already satisfied: openml in /opt/conda/lib/python3.10/site-packages (from TabularExperimentTrackerClient==0.0.1) (0.14.1)\n",
       "Requirement already satisfied: requests in /opt/conda/lib/python3.10/site-packages (from TabularExperimentTrackerClient==0.0.1) (2.28.2)\n",
       "Requirement already satisfied: liac-arff>=2.4.0 in /opt/conda/lib/python3.10/site-packages (from openml->TabularExperimentTrackerClient==0.0.1) (2.5.0)\n",
       "Requirement already satisfied: xmltodict in /opt/conda/lib/python3.10/site-packages (from openml->TabularExperimentTrackerClient==0.0.1) (0.13.0)\n",
@@ -77,17 +77,17 @@
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil->openml->TabularExperimentTrackerClient==0.0.1) (1.16.0)\n",
       "Requirement already satisfied: joblib>=1.1.1 in /opt/conda/lib/python3.10/site-packages (from scikit-learn>=0.18->openml->TabularExperimentTrackerClient==0.0.1) (1.2.0)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.10/site-packages (from scikit-learn>=0.18->openml->TabularExperimentTrackerClient==0.0.1) (3.1.0)\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.1.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0m\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m23.1.2\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m23.2.1\u001B[0m\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Collecting git+https://github.com/Bartosz-G/NeuralNetworksTrainingPackage\n",
       "  Cloning https://github.com/Bartosz-G/NeuralNetworksTrainingPackage to /tmp/pip-req-build-_iuxme5f\n",
       "  Running command git clone --filter=blob:none --quiet https://github.com/Bartosz-G/NeuralNetworksTrainingPackage /tmp/pip-req-build-_iuxme5f\n",
       "  Resolved https://github.com/Bartosz-G/NeuralNetworksTrainingPackage to commit a7560190bf2fa1bcc85ece0b20c27bdfe44ad679\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from NeuralNetworksTrainingPackage==1.0.0) (1.23.5)\n",
+      "  Preparing metadata (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25hRequirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from NeuralNetworksTrainingPackage==1.0.0) (1.23.5)\n",
       "Requirement already satisfied: pandas in /opt/conda/lib/python3.10/site-packages (from NeuralNetworksTrainingPackage==1.0.0) (2.0.1)\n",
       "Requirement already satisfied: scikit-learn in /opt/conda/lib/python3.10/site-packages (from NeuralNetworksTrainingPackage==1.0.0) (1.2.2)\n",
       "Requirement already satisfied: torch in /opt/conda/lib/python3.10/site-packages (from NeuralNetworksTrainingPackage==1.0.0) (2.0.0)\n",
@@ -107,16 +107,16 @@
       "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/lib/python3.10/site-packages (from jinja2->torch->NeuralNetworksTrainingPackage==1.0.0) (2.1.2)\n",
       "Requirement already satisfied: mpmath>=0.19 in /opt/conda/lib/python3.10/site-packages (from sympy->torch->NeuralNetworksTrainingPackage==1.0.0) (1.3.0)\n",
       "Building wheels for collected packages: NeuralNetworksTrainingPackage\n",
-      "  Building wheel for NeuralNetworksTrainingPackage (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for NeuralNetworksTrainingPackage: filename=NeuralNetworksTrainingPackage-1.0.0-py3-none-any.whl size=9632 sha256=6635f6788776ee26f69db167558c00b2f8b2b0cb35eeb9a7168f59f4efcc7fff\n",
+      "  Building wheel for NeuralNetworksTrainingPackage (setup.py) ... \u001B[?25ldone\n",
+      "\u001B[?25h  Created wheel for NeuralNetworksTrainingPackage: filename=NeuralNetworksTrainingPackage-1.0.0-py3-none-any.whl size=9632 sha256=6635f6788776ee26f69db167558c00b2f8b2b0cb35eeb9a7168f59f4efcc7fff\n",
       "  Stored in directory: /tmp/pip-ephem-wheel-cache-xbnxxqyb/wheels/82/01/e8/da81de869be2f6b8c193a6fc5c42ee3ff0b6b97a7b70cd565a\n",
       "Successfully built NeuralNetworksTrainingPackage\n",
       "Installing collected packages: NeuralNetworksTrainingPackage\n",
       "Successfully installed NeuralNetworksTrainingPackage-1.0.0\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.1.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0m\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m23.1.2\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m23.2.1\u001B[0m\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -245,24 +245,24 @@
    },
    "outputs": [],
    "source": [
-    "experiment_name = 'experiment_LCN_1'\n",
+    "experiment_name = 'test_LCN_6'\n",
     "\n",
     "\n",
     "\n",
     "# LCN and LLN Parameters\n",
-    "depth = {'distribution': 'int_uniform', 'min':1, 'max':11}\n",
+    "depth = {'distribution': 'categorical', 'values':[2,3,4,5,6,7,8,9,10,11,12]}\n",
     "seed = {'distribution': 'constant', 'value': 42}\n",
     "drop_type = {'distribution': 'categorical', 'values':['node_dropconnect', 'none']}\n",
     "p = {'distribution': 'float_uniform', 'min':0.25, 'max':0.75}\n",
     "back_n = {'distribution': 'categorical', 'values':[0, 0, 0, 1]}\n",
     "hidden_dim = {'distribution': 'constant', 'value': 1} # Assertion error coming from Net if not 1\n",
     "anneal = {'distribution': 'categorical', 'values':['interpolation', 'none', 'approx']}\n",
-    "batch_size = {'distribution': 'categorical', 'values':[16,32,64,64,64,128,256]}\n",
+    "batch_size = {'distribution': 'constant', 'value': 64}\n",
     "epochs = {'distribution': 'constant', 'value': 30}\n",
     "lr = {'distribution': 'log_uniform', 'min':0.05, 'max':0.2} # yields mean = 0.1082, median 0.1\n",
     "momentum = {'distribution': 'constant', 'value': 0.9}\n",
     "no_cuda = {'distribution': 'constant', 'value': False}\n",
-    "lr_step_size = {'distribution': 'categorical', 'values':[10, 10, 15, 20]}\n",
+    "lr_step_size = {'distribution': 'categorical', 'value':10}\n",
     "gamma = {'distribution': 'constant', 'value': 0.1}"
    ]
   },
@@ -624,7 +624,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -659,27 +662,29 @@
    "outputs": [],
    "source": [
     "from NeuralNetworksTrainingPackage.event_handler import dataPreProcessingEventEmitter\n",
-    "from NeuralNetworksTrainingPackage.dataprocessing.basic_pre_processing import filterCardinality, quantileTransform, trunctuateData, oneHotEncodePredictors, oneHotEncodeTargets, toDataFrame, splitTrainValTest\n",
+    "from NeuralNetworksTrainingPackage.dataprocessing.basic_pre_processing import filterCardinality, quantileTransform, truncateData,balancedTruncateData, oneHotEncodePredictors, oneHotEncodeTargets, toDataFrame, splitTrainValTest, balancedSplitTrainValTest\n",
     "\n",
     "n_sample = 20000\n",
     "split = [0.5, 0.25, 0.25]\n",
-    "quantile_transform_distribution='uniform'\n",
+    "quantile_transform_distribution='normal'\n",
     "\n",
     "\n",
     "data_pre_processing = dataPreProcessingEventEmitter()\n",
     "\n",
     "filter_cardinality = filterCardinality(transform = 'all')\n",
-    "trunctuate_data = trunctuateData(n = n_sample, transform = 'all')\n",
+    "truncate_data = truncateData(n = n_sample, transform = 'all')\n",
+    "balanced_truncate_data = balancedTruncateData(n = n_sample, transform = 'all') # Ensures balance of classes\n",
     "one_hot_encode_predictors = oneHotEncodePredictors(transform = 'all')\n",
     "one_hot_encode_targets = oneHotEncodeTargets(transform = 'all')\n",
     "to_data_frame = toDataFrame(transform = 'all')\n",
     "split_train_val_test = splitTrainValTest(split = split)\n",
+    "balanced_split_train_val_test = balancedSplitTrainValTest(split = split)\n",
     "quantile_transform = quantileTransform(output_distribution = quantile_transform_distribution, transform = 'all')\n",
     "\n",
     "\n",
     "# Transformations will be called in the order they're added to data_pre_processing\n",
     "data_pre_processing.add_pre_processing_step('regression', filter_cardinality)\n",
-    "data_pre_processing.add_pre_processing_step('regression', trunctuate_data)\n",
+    "data_pre_processing.add_pre_processing_step('regression', truncate_data)\n",
     "data_pre_processing.add_pre_processing_step('regression', one_hot_encode_predictors)\n",
     "data_pre_processing.add_pre_processing_step('regression', to_data_frame)\n",
     "data_pre_processing.add_pre_processing_step('regression', split_train_val_test)\n",
@@ -687,11 +692,11 @@
     "\n",
     "\n",
     "data_pre_processing.add_pre_processing_step('classification', filter_cardinality)\n",
-    "data_pre_processing.add_pre_processing_step('classification', trunctuate_data)\n",
+    "data_pre_processing.add_pre_processing_step('classification', balanced_truncate_data)\n",
     "data_pre_processing.add_pre_processing_step('classification', one_hot_encode_predictors)\n",
     "data_pre_processing.add_pre_processing_step('classification', one_hot_encode_targets)\n",
     "data_pre_processing.add_pre_processing_step('classification', to_data_frame)\n",
-    "data_pre_processing.add_pre_processing_step('classification', split_train_val_test)\n",
+    "data_pre_processing.add_pre_processing_step('classification', balanced_split_train_val_test)\n",
     "data_pre_processing.add_pre_processing_step('classification', quantile_transform)"
    ]
   },
@@ -4195,6 +4200,7 @@
     "\n",
     "sklearn_models = ('no_sklearn_models_in_this_training')\n",
     "\n",
+    "\n",
     "for i in range(14160):\n",
     "    print(f'==== Begin run:{i} ====')\n",
     "    run_info = ex.begin_run_sticky()\n",
@@ -4312,7 +4318,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4323,7 +4332,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4415,7 +4427,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4426,7 +4441,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4467,7 +4485,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4478,7 +4499,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4489,7 +4513,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4500,7 +4527,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4515,7 +4545,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4526,7 +4559,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4537,7 +4573,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4548,7 +4587,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4559,7 +4601,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4570,7 +4615,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4581,7 +4629,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4592,7 +4643,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -4602,7 +4656,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "data_pre_processing.events"
@@ -4612,7 +4670,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": []
@@ -4620,7 +4681,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
