modified lcn / lln hyperparameters

--- a/LcnExperiment.ipynb
+++ b/LcnExperiment.ipynb
@@ -252,18 +252,24 @@
     "# LCN and LLN Parameters\n",
     "depth = {'distribution': 'categorical', 'values':[2,3,4,5,6,7,8,9,10,11,12]}\n",
     "seed = {'distribution': 'constant', 'value': 42}\n",
-    "drop_type = {'distribution': 'categorical', 'values':['node_dropconnect', 'none']}\n",
-    "p = {'distribution': 'float_uniform', 'min':0.25, 'max':0.75}\n",
-    "back_n = {'distribution': 'categorical', 'values':[0, 0, 0, 1]}\n",
+    "drop_type = {'distribution': 'constant', 'value': 'isDropConnect'} # defined by p = 0 or p =/= 0\n",
+    "p = {'distribution': 'categorical', 'values':[0, 0, 0.25, 0.5, 0.75]} # 40% probability of no regularisation\n",
     "hidden_dim = {'distribution': 'constant', 'value': 1} # Assertion error coming from Net if not 1\n",
-    "anneal = {'distribution': 'categorical', 'values':['interpolation', 'none', 'approx']}\n",
+    "anneal = {'distribution': 'constant', 'value': 'none'}\n",
+    "optimizer = {'distribution': 'categorical', 'values': ['SGD', 'SGD', 'SGD', 'SGD', 'AMSGrad']} # 80% of SGD and 20% AMSGrad\n",
     "batch_size = {'distribution': 'constant', 'value': 64}\n",
     "epochs = {'distribution': 'constant', 'value': 30}\n",
     "lr = {'distribution': 'log_uniform', 'min':0.05, 'max':0.2} # yields mean = 0.1082, median 0.1\n",
     "momentum = {'distribution': 'constant', 'value': 0.9}\n",
     "no_cuda = {'distribution': 'constant', 'value': False}\n",
     "lr_step_size = {'distribution': 'categorical', 'value':10}\n",
-    "gamma = {'distribution': 'constant', 'value': 0.1}"
+    "gamma = {'distribution': 'constant', 'value': 0.1}\n",
+    "\n",
+    "# Regression:\n",
+    "back_n_reg = {'distribution': 'categorical', 'values':[0, 1, 2, 3, 4]}\n",
+    "\n",
+    "# Classification:\n",
+    "back_n_cls = {'distribution': 'constant', 'value': 0}"
    ]
   },
   {
@@ -289,20 +295,20 @@
    "outputs": [],
    "source": [
     "#============================================================\n",
-    "# Regression: Locally Constant Networks\n",
+    "# Locally Constant Networks\n",
     "#============================================================\n",
-    "LCN_reg_SGD_space = {\n",
+    "LCN_reg_space = {\n",
     "    'depth': depth,\n",
     "    'seed': seed,\n",
     "    'drop_type': drop_type,\n",
     "    'p': p,\n",
     "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
     "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n,\n",
+    "    'back_n': back_n_reg,\n",
     "    'net_type': {'distribution': 'constant', 'value': 'locally_constant'},\n",
     "    'hidden_dim': hidden_dim,\n",
     "    'anneal': anneal,\n",
-    "    'optimizer': {'distribution': 'constant', 'value': 'SGD'},\n",
+    "    'optimizer': optimizer,\n",
     "    'batch_size': batch_size,\n",
     "    'epochs': epochs,\n",
     "    'lr': lr,\n",
@@ -313,93 +319,18 @@
     "    'task': {'distribution': 'constant', 'value': 'regression'}\n",
     "    }\n",
     "\n",
-    "LCN_reg_AMSGrad_space = {\n",
+    "LCN_cls_space = {\n",
     "    'depth': depth,\n",
     "    'seed': seed,\n",
     "    'drop_type': drop_type,\n",
     "    'p': p,\n",
     "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
     "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n,\n",
+    "    'back_n': back_n_cls,\n",
     "    'net_type': {'distribution': 'constant', 'value': 'locally_constant'},\n",
     "    'hidden_dim': hidden_dim,\n",
     "    'anneal': anneal,\n",
-    "    'optimizer': {'distribution': 'constant', 'value': 'AMSGrad'},\n",
-    "    'batch_size': batch_size,\n",
-    "    'epochs': epochs,\n",
-    "    'lr': lr,\n",
-    "    'momentum': momentum,\n",
-    "    'no_cuda': no_cuda,\n",
-    "    'lr_step_size': lr_step_size,\n",
-    "    'gamma': gamma,\n",
-    "    'task': {'distribution': 'constant', 'value': 'regression'}\n",
-    "    }\n",
-    "\n",
-    "#============================================================\n",
-    "# Regression: Locally Linear Networks\n",
-    "#============================================================\n",
-    "\n",
-    "LLN_reg_SGD_space = {\n",
-    "    'depth': depth,\n",
-    "    'seed': seed,\n",
-    "    'drop_type': drop_type,\n",
-    "    'p': p,\n",
-    "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
-    "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n,\n",
-    "    'net_type': {'distribution': 'constant', 'value': 'locally_linear'},\n",
-    "    'hidden_dim': hidden_dim,\n",
-    "    'anneal': anneal,\n",
-    "    'optimizer': {'distribution': 'constant', 'value': 'SGD'},\n",
-    "    'batch_size': batch_size,\n",
-    "    'epochs': epochs,\n",
-    "    'lr': lr,\n",
-    "    'momentum': momentum,\n",
-    "    'no_cuda': no_cuda,\n",
-    "    'lr_step_size': lr_step_size,\n",
-    "    'gamma': gamma,\n",
-    "    'task': {'distribution': 'constant', 'value': 'regression'}\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "LLN_reg_AMSGrad_space = {\n",
-    "    'depth': depth,\n",
-    "    'seed': seed,\n",
-    "    'drop_type': drop_type,\n",
-    "    'p': p,\n",
-    "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
-    "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n,\n",
-    "    'net_type': {'distribution': 'constant', 'value': 'locally_linear'},\n",
-    "    'hidden_dim': hidden_dim,\n",
-    "    'anneal': anneal,\n",
-    "    'optimizer': {'distribution': 'constant', 'value': 'AMSGrad'},\n",
-    "    'batch_size': batch_size,\n",
-    "    'epochs': epochs,\n",
-    "    'lr': lr,\n",
-    "    'momentum': momentum,\n",
-    "    'no_cuda': no_cuda,\n",
-    "    'lr_step_size': lr_step_size,\n",
-    "    'gamma': gamma,\n",
-    "    'task': {'distribution': 'constant', 'value': 'regression'}\n",
-    "    }\n",
-    "\n",
-    "#============================================================\n",
-    "# Classification: Locally Constant Networks\n",
-    "#============================================================\n",
-    "\n",
-    "LCN_cls_SGD_space = {\n",
-    "    'depth': depth,\n",
-    "    'seed': seed,\n",
-    "    'drop_type': drop_type,\n",
-    "    'p': p,\n",
-    "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
-    "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n,\n",
-    "    'net_type': {'distribution': 'constant', 'value': 'locally_constant'},\n",
-    "    'hidden_dim': hidden_dim,\n",
-    "    'anneal': anneal,\n",
-    "    'optimizer': {'distribution': 'constant', 'value': 'SGD'},\n",
+    "    'optimizer': optimizer,\n",
     "    'batch_size': batch_size,\n",
     "    'epochs': epochs,\n",
     "    'lr': lr,\n",
@@ -408,20 +339,24 @@
     "    'lr_step_size': lr_step_size,\n",
     "    'gamma': gamma,\n",
     "    'task': {'distribution': 'constant', 'value': 'classification'}\n",
-    "    }\n",
+    "}\n",
     "\n",
-    "LCN_cls_AMSGrad_space = {\n",
+    "#============================================================\n",
+    "# Locally Linear Networks\n",
+    "#============================================================\n",
+    "\n",
+    "LLN_reg_space = {\n",
     "    'depth': depth,\n",
     "    'seed': seed,\n",
     "    'drop_type': drop_type,\n",
     "    'p': p,\n",
     "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
     "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n,\n",
-    "    'net_type': {'distribution': 'constant', 'value': 'locally_constant'},\n",
+    "    'back_n': back_n_reg,\n",
+    "    'net_type': {'distribution': 'constant', 'value': 'locally_linear'},\n",
     "    'hidden_dim': hidden_dim,\n",
     "    'anneal': anneal,\n",
-    "    'optimizer': {'distribution': 'constant', 'value': 'AMSGrad'},\n",
+    "    'optimizer': optimizer,\n",
     "    'batch_size': batch_size,\n",
     "    'epochs': epochs,\n",
     "    'lr': lr,\n",
@@ -429,48 +364,22 @@
     "    'no_cuda': no_cuda,\n",
     "    'lr_step_size': lr_step_size,\n",
     "    'gamma': gamma,\n",
-    "    'task': {'distribution': 'constant', 'value': 'classification'}\n",
+    "    'task': {'distribution': 'constant', 'value': 'regression'}\n",
     "    }\n",
     "\n",
-    "#============================================================\n",
-    "# Classification: Locally Linear Networks\n",
-    "#============================================================\n",
     "\n",
-    "LLN_cls_SGD_space = {\n",
+    "LLN_cls_space = {\n",
     "    'depth': depth,\n",
     "    'seed': seed,\n",
     "    'drop_type': drop_type,\n",
     "    'p': p,\n",
     "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
     "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n,\n",
+    "    'back_n': back_n_cls,\n",
     "    'net_type': {'distribution': 'constant', 'value': 'locally_linear'},\n",
     "    'hidden_dim': hidden_dim,\n",
     "    'anneal': anneal,\n",
-    "    'optimizer': {'distribution': 'constant', 'value': 'SGD'},\n",
-    "    'batch_size': batch_size,\n",
-    "    'epochs': epochs,\n",
-    "    'lr': lr,\n",
-    "    'momentum': momentum,\n",
-    "    'no_cuda': no_cuda,\n",
-    "    'lr_step_size': lr_step_size,\n",
-    "    'gamma': gamma,\n",
-    "    'task': {'distribution': 'constant', 'value': 'classification'}\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "LLN_cls_AMSGrad_space = {\n",
-    "    'depth': depth,\n",
-    "    'seed': seed,\n",
-    "    'drop_type': drop_type,\n",
-    "    'p': p,\n",
-    "    'ensemble_n': {'distribution': 'constant', 'value': 1},\n",
-    "    'shrinkage': {'distribution': 'constant', 'value': 1},\n",
-    "    'back_n': back_n,\n",
-    "    'net_type': {'distribution': 'constant', 'value': 'locally_linear'},\n",
-    "    'hidden_dim': hidden_dim,\n",
-    "    'anneal': anneal,\n",
-    "    'optimizer': {'distribution': 'constant', 'value': 'AMSGrad'},\n",
+    "    'optimizer': optimizer,\n",
     "    'batch_size': batch_size,\n",
     "    'epochs': epochs,\n",
     "    'lr': lr,\n",
