updated model_groups to reflect model space changes

--- a/LcnExperiment.ipynb
+++ b/LcnExperiment.ipynb
@@ -414,14 +414,10 @@
    "outputs": [],
    "source": [
     "model_groups = {\n",
-    "    'LCN_reg_SGD':{'model':'LCN_reg_SGD', 'hype':LCN_reg_SGD_space},\n",
-    "    'LCN_reg_AMSGrad':{'model':'LCN_reg_AMSGrad', 'hype':LCN_reg_AMSGrad_space},\n",
-    "    'LLN_reg_SGD':{'model':'LLN_reg_SGD', 'hype':LLN_reg_SGD_space},\n",
-    "    'LLN_reg_AMSGrad':{'model':'LLN_reg_AMSGrad', 'hype':LLN_reg_AMSGrad_space},\n",
-    "    'LCN_cls_SGD':{'model':'LCN_cls_SGD', 'hype':LCN_cls_SGD_space},\n",
-    "    'LCN_cls_AMSGrad':{'model':'LCN_cls_AMSGrad', 'hype':LCN_cls_AMSGrad_space},\n",
-    "    'LLN_cls_SGD':{'model':'LLN_cls_SGD', 'hype':LLN_cls_SGD_space},\n",
-    "    'LLN_cls_AMSGrad':{'model':'LLN_cls_AMSGrad', 'hype':LLN_cls_AMSGrad_space},\n",
+    "    'LCN_reg':{'model':'LCN_reg', 'hype':LCN_reg_space},\n",
+    "    'LCN_cls':{'model':'LCN_cls', 'hype':LCN_cls_space},\n",
+    "    'LLN_reg':{'model':'LLN_reg', 'hype':LLN_reg_space},\n",
+    "    'LLN_cls':{'model':'LLN_cls', 'hype':LLN_cls_space}\n",
     "}\n",
     "\n",
     "ex.def_model_groups(model_groups)"
@@ -527,20 +523,6 @@
     "successful_runs = exp_info['successful_runs']\n",
     "required_runs = exp_info['required_runs']\n",
     "print('total required runs: {}'.format(required_runs))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "tags": [],
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# data_pre_processing.reset(True)"
    ]
   },
   {
