quick main loop update of model names

--- a/LcnExperiment.ipynb
+++ b/LcnExperiment.ipynb
@@ -4085,9 +4085,7 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "torch_models = ('LCN_reg_SGD', 'LCN_reg_AMSGrad', 'LLN_reg_SGD', 'LLN_reg_AMSGrad', 'LCN_cls_SGD','LCN_cls_AMSGrad', 'LLN_cls_SGD','LLN_cls_AMSGrad')\n",
+    "torch_models = ('LCN_reg', 'LCN_cls', 'LLN_reg', 'LLN_cls')\n",
     "\n",
     "sklearn_models = ('no_sklearn_models_in_this_training')\n",
     "\n",
