added MlpTraining routine

--- a/MlpExperiment.ipynb
+++ b/MlpExperiment.ipynb
@@ -170,12 +170,11 @@
     "experiment_name = 'test_Mlp_7'\n",
     "\n",
     "\n",
-    "\n",
-    "# LCN and LLN Parameters\n",
+    "# Mlp parameters\n",
     "depth = {'distribution': 'categorical', 'values':[2,3,4,5,6,7,8,9,10,11,12]}\n",
     "layer_size = {'distribution': 'categorical', 'values':[64, 128, 256, 512]}\n",
     "seed = {'distribution': 'constant', 'value': 42}\n",
-    "regularize = {'distribution': 'categorical', 'values':[None, 0.5, 'bn']} # float implies dropout\n",
+    "regularize = {'distribution': 'categorical', 'values':[None, None, None, 0.25, 0.5, 0.75, 'bn', 'bn','bn']} # float implies dropout\n",
     "embd_size = {'distribution': 'categorical', 'values':[None, None, None, 'sqrt', 64, 128, 256]} # 'sqrt implies embedding is sqrt smaller than the number of categories\n",
     "optimizer = {'distribution': 'categorical', 'values': ['SGD', 'SGD', 'SGD', 'SGD', 'AMSGrad']}\n",
     "batch_size = {'distribution': 'categorical', 'values':[64, 128, 256, 512, 1024]}\n",
@@ -526,9 +525,10 @@
    },
    "outputs": [],
    "source": [
-    "from NeuralNetworksTrainingPackage.dataprocessing.basic_pre_processing import CustomDataset, toPyTorchDatasets\n",
+    "from NeuralNetworksTrainingPackage.dataprocessing.basic_pre_processing import CustomCategoricalSplitDataset, toPyTorchDatasets\n",
     "\n",
-    "to_pytorch_datasets = toPyTorchDatasets(wrapper = CustomDataset)\n",
+    "pytorch_data_class = CustomCategoricalSplitDataset\n",
+    "to_pytorch_datasets = toPyTorchDatasets(wrapper = pytorch_data_class)\n",
     "\n",
     "# Transformations will be called after general pre-processing steps, and in order they're added\n",
     "data_pre_processing.add_pre_processing_step('LCN_reg', to_pytorch_datasets)\n",
@@ -660,7 +660,9 @@
     "    hyperparameters = run_info['hyp']\n",
     "    model_name = run_info['model']\n",
     "\n",
+    "    # Don't forget to add a task to hypeparams ----\n",
     "    task = hyperparameters['task']\n",
+    "    # ---------------------------------------------\n",
     "    seed = hyperparameters['seed']\n",
     "\n",
     "\n",
