--- a/MlpExperiment.ipynb
+++ b/MlpExperiment.ipynb
@@ -176,7 +176,7 @@
     "seed = {'distribution': 'constant', 'value': 42}\n",
     "regularize = {'distribution': 'categorical', 'values':[None, None, None, 0.25, 0.5, 0.75, 'bn', 'bn','bn']} # float implies dropout\n",
     "embd_size = {'distribution': 'categorical', 'values':[None, None, None, 'sqrt', 64, 128, 256]} # 'sqrt implies embedding is sqrt smaller than the number of categories\n",
-    "optimizer = {'distribution': 'categorical', 'values': ['SGD', 'SGD', 'SGD', 'SGD', 'AMSGrad']}\n",
+    "optimizer = {'distribution': 'categorical', 'values': ['SGD', 'SGD', 'SGD', 'SGD', 'Adam']}\n",
     "batch_size = {'distribution': 'categorical', 'values':[64, 128, 256, 512, 1024]}\n",
     "epochs = {'distribution': 'categorical', 'values':[60, 90, 120, 150]}\n",
     "lr = {'distribution': 'log_uniform', 'min':1e-5, 'max':1e-2}\n",
